Fix horizontal overflow

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -6,6 +6,9 @@ body {
   background: white;
   font-size: 1.4rem;
   font-family: 'Montserrat', sans-serif;
+  margin: 0;
+  width: 100vw;
+  overflow-x: hidden;
 }
 
 h1, h2, h3, h4, h5 {
